# Rust-OS

./: .gitignore  README.md
os/: Cargo.toml
os/.cargo/: config
os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
os/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
