[package]
name = "os"
version = "0.1.0"
authors = ["ilya <ilyaandreev2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.11.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "--display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false